@@ -46,7 +46,7 @@ AC_CONFIG_HEADERS([lib/marc/config.h])
 
 dnl Checks for programs.
 AC_PROG_CXX
-AX_CXX_COMPILE_STDCXX_14
+AX_CXX_COMPILE_STDCXX_17
 AC_PROG_LN_S
 AX_PROG_BISON
 AM_PROG_LEX
