@@ -1,3 +1,5 @@
+- MaRC now requires a compiler that supports the C++17 standard.
+
 1 February 2019 - MaRC 0.10
 
 - Fixed a regression in quadratic roots calculations that caused some
